# universal-scraper-langgraph

./: .gitignore  README.md  agent_nodes.py  app.py  graph.py  input.csv  internetsearch.py  pyproject.toml  websitescrap.py
tools/: custom.py  firecrawl.py  jinaai.py  tavily.py  utils.py
